plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'project'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.1.2'

//	lombok
	compileOnly 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
//  security
	testImplementation 'org.springframework.security:spring-security-test:6.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
//  JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

//	Gson
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
